Slight documentation changes